# duckdb-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/actions/ccache-action/: action.yml
.github/actions/prepare-repo-for-build/: action.yml
.github/workflows/: README.md  build-wheels.yml  cleanup_pypi.yml  code_quality.yml  codspeed.yml  coverage.yml  nightly.yml  on_external_dispatch.yml  on_push.yml  packaging_sdist.yml  packaging_wheels.yml  pypi_packaging.yml  release.yml  sdist-builds.yml  targeted_test.yml  test.yml
_duckdb-stubs/: __init__.pyi  _enums.pyi  _expression.pyi  _func.pyi  _sqltypes.pyi  _typing.pyi  typing.pyi
benchmarks/: PLAN.md  README.md  _scale.py  baseline.json  compare_baseline.py  conftest.py  requirements-bench.txt  test_arrow_perf.py  test_cardinality_perf.py  test_concurrency_perf.py  test_engine_control_perf.py  test_fetch_perf.py  test_ingest_native_perf.py  test_ingest_numpy_perf.py  test_pandas_perf.py  test_produce_numpy_perf.py  test_relational_construction_perf.py  test_types_roundtrip_perf.py  test_udf_perf.py
cmake/: compiler_launcher.cmake  duckdb_build_config.cmake  duckdb_loader.cmake
duckdb/: __init__.py  __init__.pyi  _dbapi_type_object.py  _duckdb.pyi  bytes_io_wrapper.py  filesystem.py  polars_io.py  udf.py
duckdb-stubs/_duckdb/: __init__.pyi  typing.pyi
duckdb/_duckdb/: __init__.pyi  functional.pyi  typing.pyi
duckdb/experimental/spark/: __init__.py  _globals.py  _typing.py  context.py  exception.py
duckdb/functional/: __init__.py
duckdb/query_graph/: __main__.py
duckdb/typing/: __init__.py
duckdb/value/constant/: __init__.py
duckdb_packaging/: __init__.py  _build_config.py  _tomllib.py  _versioning.py  build_backend.py  bump_version.py  create_post_release.py  pypi_cleanup.py  setuptools_scm_version.py
duckdb_pytooling/: __init__.py  build_backend.py
scripts/: bootstrap_duckdb.py  cache_data.json  connection_methods.json  generate_connection_methods.py  generate_connection_stubs.py  generate_connection_wrapper_methods.py  generate_connection_wrapper_stubs.py  generate_import_cache_cpp.py  generate_import_cache_json.py  get_cpp_methods.py  imports.py  stubfix.py  versioning.py
sqllogic/: conftest.py  test_sqllogic.py
src/: CMakeLists.txt  dataframe.cpp  duckdb_python.cpp  map.cpp  path_like.cpp  pyconnection.cpp  pyexpression.cpp  pyfilesystem.cpp  pyrelation.cpp  pyresult.cpp  pystatement.cpp  python_import_cache.cpp  python_replacement_scan.cpp  python_udf.cpp  pyutil.cpp
src/arrow/: arrow_array_stream.cpp  arrow_export_utils.cpp  filter_pushdown_visitor.cpp  polars_filter_pushdown.cpp  pyarrow_filter_pushdown.cpp
src/common/: exceptions.cpp
src/duckdb_py/: CMakeLists.txt  dataframe.cpp  duckdb_python.cpp  map.cpp  path_like.cpp  pyconnection.cpp  pyexpression.cpp  pyfilesystem.cpp  pyrelation.cpp  pyresult.cpp  pystatement.cpp  python_import_cache.cpp  python_log_storage.cpp  python_replacement_scan.cpp  python_udf.cpp
src/duckdb_py/arrow/: CMakeLists.txt  arrow_array_stream.cpp  arrow_export_utils.cpp  filter_pushdown_visitor.cpp  polars_filter_pushdown.cpp  pyarrow_filter_pushdown.cpp
src/duckdb_py/common/: exceptions.cpp
src/duckdb_py/functional/: functional.cpp
src/duckdb_py/native/: python_conversion.cpp  python_objects.cpp
src/duckdb_py/numpy/: array_wrapper.cpp  numpy_bind.cpp  numpy_scan.cpp  raw_array_wrapper.cpp
src/duckdb_py/pandas/: analyzer.cpp  bind.cpp  scan.cpp
src/duckdb_py/pybind11/: pybind_wrapper.cpp
src/duckdb_py/pyconnection/: type_creation.cpp
src/duckdb_py/pyexpression/: initialize.cpp
src/duckdb_py/pyrelation/: initialize.cpp
src/duckdb_py/typing/: pytype.cpp  typing.cpp
src/functional/: functional.cpp
src/include/duckdb_python/: dataframe.hpp  exceptions.hpp  filesystem_object.hpp  functional.hpp  jupyter_progress_bar_display.hpp  map.hpp  path_like.hpp  pyfilesystem.hpp  pyrelation.hpp  pyresult.hpp  pystatement.hpp  python_conversion.hpp  python_dependency.hpp  python_object_container.hpp  python_objects.hpp  python_replacement_scan.hpp  pytype.hpp  pyutil.hpp  registered_py_object.hpp  typing.hpp
src/jupyter/: jupyter_progress_bar_display.cpp
src/native/: python_conversion.cpp  python_objects.cpp
src/numpy/: CMakeLists.txt  array_wrapper.cpp  numpy_array.cpp  numpy_bind.cpp  numpy_scan.cpp  raw_array_wrapper.cpp  type.cpp
src/pandas/: analyzer.cpp  bind.cpp  scan.cpp
src/pybind11/: CMakeLists.txt
src/pyconnection/: type_creation.cpp
src/pyexpression/: initialize.cpp
src/pyrelation/: initialize.cpp
src/typing/: pytype.cpp  typing.cpp
tests/: conftest.py
tests/coverage/: test_pandas_categorical_coverage.py
tests/extensions/: test_extensions_loading.py  test_httpfs.py
tests/extensions/json/: test_read_json.py
tests/fast/: test_alex_multithread.py  test_all_types.py  test_ambiguous_prepare.py  test_binding_pressure_leak.py  test_case_alias.py  test_context_manager.py  test_duckdb_api.py  test_expression.py  test_expression_implicit_conversion.py  test_filesystem.py  test_get_table_names.py  test_import_export.py  test_insert.py  test_json_logging.py  test_many_con_same_file.py  test_map.py  test_metatransaction.py  test_multi_statement.py  test_multithread.py  test_nanobind_cutover_regressions.py  test_non_default_conn.py  test_parameter_list.py  test_parquet.py  test_profiler.py  test_pypi_cleanup.py  test_python_log_storage.py  test_pytorch.py  test_relation.py  test_relation_dependency_leak.py  test_replacement_scan.py  test_result.py  test_runtime_error.py  test_sql_expression.py  test_string_annotation.py  test_string_coercion.py  test_tf.py  test_transaction.py  test_type.py  test_type_conversion.py  test_type_explicit.py  (+7 more)
tests/fast/adbc/: test_adbc.py  test_connection_get_info.py  test_statement_bind.py
tests/fast/api/: test_3324.py  test_3654.py  test_3728.py  test_528_rel_query_readonly.py  (+34 more)
tests/slow/: test_concurrent_connection_no_crash.py  test_h2oai_arrow.py
tests/stubs/: mypy.ini  test_stubs.py
(+256 files in other folders)
