# pyproject.toml: contains most project, build, linting, formatting and ci configuration

###################################################
# PROJECT CONFIG
###################################################

[project]
name = "duckdb"
dynamic = ["version"]
description = "DuckDB in-process database"
readme = "README.md"
keywords = ["DuckDB", "Database", "SQL", "OLAP"]
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
]
authors = [{name = "DuckDB Labs", email = "info@duckdblabs.nl"}]
maintainers = [{name = "DuckDB Labs", email = "info@duckdblabs.nl"}]

[project.urls]
Documentation = "https://duckdb.org/docs/stable/clients/python/overview"
Source = "https://github.com/duckdb/duckdb/blob/main/tools/pythonpkg"
Issues = "https://github.com/duckdb/duckdb/issues"
Changelog = "https://github.com/duckdb/duckdb/releases"

[project.optional-dependencies]
all = [ # users can install duckdb with 'duckdb[all]', which will install this list
    "ipython", # used in duckdb.query_graph
    "fsspec",  # used in duckdb.filesystem
    "numpy",   # used in duckdb.experimental.spark and in duckdb.fetchnumpy()
    "pandas",  # used for pandas dataframes all over the place
    "pyarrow", # used for pyarrow support
    "adbc_driver_manager", # for the adbc driver (TODO: this should live under the duckdb package)
]

###################################################
# BUILD CONFIG
#
# Includes config used for building wheels, sdists and for installing
# Tools: scikit-build-core and cmake
###################################################

[build-system]
build-backend = "duckdb_packaging.build_backend"
backend-path = ["./"]
requires = [
    "scikit-build-core",
	"pybind11[global]>=2.6.0",
    "setuptools_scm>=8.0",
]

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.29.0"
ninja.version = ">=1.10"
ninja.make-fallback = false
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.wheel.packages]
duckdb = "duckdb"

[tool.scikit-build.cmake.define]
CORE_EXTENSIONS = "core_functions;json;parquet;icu;jemalloc"

[tool.setuptools_scm]
version_scheme = "duckdb_packaging.setuptools_scm_version:version_scheme"
local_scheme = "no-local-version"
fallback_version = "0.0.1.dev1"

# Override: if COVERAGE is set then:
# - we create a RelWithDebInfo build
# - we make sure we use a persistent build dir so we get access to the .gcda files
# - we build the extension with --coverage
# - we disable unity builds
[[tool.scikit-build.overrides]]
if.env.COVERAGE = true
cmake.build-type = "RelWithDebInfo"
build-dir  = "build/coverage/"

# Separate override because we have to append to cmake.define with `inherit` in order not to overwrite other defines.
#   see https://scikit-build-core.readthedocs.io/en/latest/configuration/overrides.html#inheriting-for-tables-and-arrays
[[tool.scikit-build.overrides]]
if.env.COVERAGE = true
inherit.cmake.define = "append"
cmake.define.CMAKE_CXX_FLAGS = "--coverage -O0"
cmake.define.CMAKE_C_FLAGS = "--coverage -O0"
cmake.define.CMAKE_SHARED_LINKER_FLAGS = "--coverage"
cmake.define.DISABLE_UNITY = "1"

# Override: if we're in editable mode then make sure a build dir is set. Note that COVERAGE runs have their own
#   build-dir, and we don't want to interfere with that.
[[tool.scikit-build.overrides]]
if.state   = "editable"
if.env.COVERAGE = false
build-dir  = "build/{build_type}"
editable.rebuild = true

# Separate override because we have to append to cmake.define with `inherit` in order not to overwrite other defines.
#   see https://scikit-build-core.readthedocs.io/en/latest/configuration/overrides.html#inheriting-for-tables-and-arrays
[[tool.scikit-build.overrides]]
if.state   = "editable"
if.env.COVERAGE = false
inherit.cmake.define = "append"
cmake.define.DISABLE_UNITY = "1"


[tool.scikit-build.sdist]
include = [
    "README.md",
    "LICENSE",

    # Build configuration
    "pyproject.toml",
    "CMakeLists.txt",
    "cmake/**",

    # Source code
    "src/**",
    "duckdb/**",
    "duckdb_packaging/**",
    "adbc_driver_duckdb/**",

    # Generated during sdist build, contains git describe string for duckdb
    "duckdb_packaging/duckdb_version.txt",

    # -------------- DuckDB submodule includes
    # Core DuckDB source and build system
    "external/duckdb/LICENSE",
    "external/duckdb/src/**",
    "external/duckdb/CMakeLists.txt",
    "external/duckdb/DuckDBConfig.cmake.in",
    "external/duckdb/DuckDBConfigVersion.cmake.in",

    # Third-party libraries and extensions
    "external/duckdb/third_party/**",
    "external/duckdb/extension/**",

    # Can't avoid including a small subset of ./tools and ./.github
    "external/duckdb/tools/CMakeLists.txt",
    "external/duckdb/tools/utils/test_platform.cpp",
    "external/duckdb/.github/config/out_of_tree_extensions.cmake",
    "external/duckdb/.github/config/in_tree_extensions.cmake",
]
exclude = [
    "/*",
    "/.*",
]

###################################################
# DEV CONFIG
#
# Config for environment management, dependency groups,
# testing, type checking, linting, formatting and coverage
#
# Tools:
# - uv: Python package and project manager
# - mypy: Static type checking for Python
# - ruff: Python linter and code formatter
# - coverage.py: Code coverage (Python and C++)
# - pytest
###################################################

[tool.uv]
default-groups = ["dev"]

[dependency-groups] # used for development only, requires pip >=25.1.0
stubdeps = [ # dependencies used for typehints in the stubs
    "fsspec",
    "pandas",
    "polars",
    "pyarrow",
]
test = [ # dependencies used for running tests
    "pytest",
    "pytest-reraise",
    "pytest-timeout",
    "mypy",
    "coverage",
    "fsspec>=2022.11.0",
    "gcsfs",
    "numpy",
    "packaging",
    "pandas>=2.0.0",
    "polars",
    "psutil",
    "py4j",
    "pyarrow>=18.0.0",
    "pyspark",
    "pytz",
    "requests",
    "tensorflow; python_version <= '3.12'",
    "torch",
    "urllib3",
]
scripts = [ # dependencies used for running scripts
    "cxxheaderparser",
    "ipython",
    "ipywidgets",
    "numpy",
    "pandas",
    "pcpp",
    "polars",
    "pyarrow",
    "pytz"
]
duckdb_packaging = [ # dependencies used for using included packaging tooling
    "scikit_build_core>=0.11",
    "setuptools_scm>=8.0"
]
dev = [ # tooling like uv will install this automatically when syncing the environment
    "pybind11>=2.6.0",
    "ruff>=0.11.13",
    {include-group = "stubdeps"},
    {include-group = "test"},
    {include-group = "scripts"},
    {include-group = "duckdb_packaging"},
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # Jupyter is throwing DeprecationWarnings
    "ignore:function ham() is deprecated:DeprecationWarning",
    # Pyspark is throwing these warnings
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:is_datetime64tz_dtype is deprecated:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["duckdb"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"
fix = true
fixable = ["ALL"]
exclude = ['external/duckdb']

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # flake8-docstrings
    "E", # pycodestyle
    "EM", # flake8-errmsg
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "FBT001", # flake8-boolean-trap
    "I", # isort
    "ICN", # flake8-import-conventions
    "INT", # flake8-gettext
    "PERF", # perflint
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TD", # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = []

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "double"
indent-style = "space"

###################################################
# CI CONFIG
#
# Configuration for CI Workflows
# Tools: cibuildwheel
###################################################
[tool.cibuildwheel]
build-frontend = "build[uv]"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-build = ["yum install -y ccache"]

[tool.cibuildwheel.macos]
before-build = ["brew install ccache"]

[tool.cibuildwheel.windows]
before-build = ["choco install ccache"]
